# rinse-backend

./: .env.example  .gitignore  AUTH_INVESTIGATION.md  CLAUDE.md  CONCURRENT_ARCHITECTURE.md  CONTEXT.md  CURRENT_TASK_1-29_5-20pm.md  Cargo.toml  FINAL_TEST_RESULTS.md  IMPLEMENTATION_PLAN_B.md  SOULSEEK_PROTOCOL_REFERENCE.md  SOULSEEK_SEARCH_HANDOFF.md  TEST_REPORT.md  TEST_RESULTS_ANALYSIS.md  frontend-ws-logs.txt  rinse.db  test_env.rs
docs/: PROTOCOL_IMPL.md  fd-exhaustion-analysis.md  nicotine-comparison.md
migrations/: 001_create_users_table.sql  002_create_items_table.sql  003_create_lists_table.sql  004_add_email_verification.sql  005_create_search_queue.sql  006_add_retry_count.sql  007_add_client_id.sql  008_add_metadata_fields.sql  009_add_artist_track_fields.sql  010_create_search_history.sql  011_create_oauth_connections.sql  012_create_playlist_imports.sql  013_create_failed_import_tracks.sql  014_add_audio_properties.sql  015_add_user_profile_fields.sql  016_add_cover_cached.sql  017_add_user_role.sql  018_create_local_chat.sql  019_create_direct_messages.sql
scripts/: discogs_token.sh
src/: lib.rs  main.rs
src/api/: admin.rs  attribution.rs  auth.rs  chat.rs  cover.rs  direct_messages.rs  items.rs  lists.rs  local_chat.rs  metadata.rs  mod.rs  oauth.rs  profile.rs  queue.rs  uploads.rs  ws.rs
src/db/: mod.rs  tests.rs
src/models/: mod.rs
src/protocol/: client.rs  codec.rs  connection.rs  file_selection.rs  messages.rs  mod.rs  obfuscation.rs  peer.rs  router.rs
src/services/: mod.rs  (+8 more)
tests/: e2e_search.rs  e2e_soulseek.rs  old_e2e_search.rs
(+12 files in other folders)
