[package]
name = "rinse-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"

# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }

# Password hashing
argon2 = "0.5"
md5 = "0.7"

# JWT for auth
jsonwebtoken = "9.2"
async-trait = "0.1"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Compression
flate2 = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
fuzzy-matcher = "0.3"
dotenvy = "0.15"

# File streaming
async-stream = "0.3"
mime_guess = "2.0"
zip = "0.6"

# UPnP for automatic port forwarding
igd-next = { version = "0.15", features = ["aio_tokio"] }
